fixing issue (not reported in JIRA?) where user mgt tables were not aligned with each other on the user mgt page (needed to float, and then clear the float).
The table layout is still ugly, as per MMDB-942.

--- a/edu.illinois.ncsa.mmdb.web/war/mmdb.css
+++ b/edu.illinois.ncsa.mmdb.web/war/mmdb.css
@@ -514,9 +514,15 @@ a:hover {
 	width: 300px;
 }
 
+.userManagementMain {
+	float: left;
+	text-align: left;
+	width: 800px;
+}
+
 .usersTable {
 	width: 800px;
-	margin: 20px auto 100px auto;
+	margin: 10px auto 75px auto;
 }
 
 .textBoxWatermark {
